# materialize

./: Cargo.toml  adapter_notes.txt  build.sh  compose.yml  docker-compose.yml  mssql.txt  s  ss  up.sh  upp.sh
ci/builder/: Dockerfile  requirements.txt
misc/dbt-materialize/: setup.py
src/adapter/: Cargo.toml
src/audit-log/: Cargo.toml
src/avro/: Cargo.toml
src/aws-secrets-controller/: Cargo.toml
src/balancerd/: Cargo.toml
src/billing-demo/: Cargo.toml
src/build-id/: Cargo.toml
src/catalog/: Cargo.toml
src/catalog-debug/: Cargo.toml
src/ccsr/: Cargo.toml
src/cloud-api/: Cargo.toml
src/cloud-resources/: Cargo.toml
src/cluster/: Cargo.toml
src/cluster-client/: Cargo.toml
src/clusterd/: Cargo.toml
src/compute/: Cargo.toml
src/compute-client/: Cargo.toml
src/compute-types/: Cargo.toml
src/controller/: Cargo.toml
src/coord/: Cargo.toml
src/dataflow-types/: Cargo.toml
src/display-derive/: Cargo.toml
src/dyncfg/: Cargo.toml
src/environmentd/: Cargo.toml
src/expr/: Cargo.toml
src/fivetran-destination/: Cargo.toml
src/frontegg-auth/: Cargo.toml
src/frontegg-mock/: Cargo.toml
src/http-util/: Cargo.toml
src/interchange/: Cargo.toml
src/kafka-util/: Cargo.toml
src/lowertest/: Cargo.toml
src/mysql-util/: Cargo.toml
src/mz/: Cargo.toml
src/npm/: Cargo.toml
src/orchestrator/: Cargo.toml
src/orchestrator-kubernetes/: Cargo.toml
src/orchestrator-process/: Cargo.toml
src/orchestrator-tracing/: Cargo.toml
src/ore/: Cargo.toml
src/persist/: Cargo.toml
src/persist-cli/: Cargo.toml
src/persist-client/: Cargo.toml
src/persist-txn/: Cargo.toml
src/persist-types/: Cargo.toml
src/pgcopy/: Cargo.toml
src/pgcopy/src/: copy.rs  lib.rs
src/pgrepr/: Cargo.toml
src/pgtest/: Cargo.toml
src/pgtz/: Cargo.toml
src/pgwire/: Cargo.toml
src/pid-file/: Cargo.toml
src/postgres-client/: Cargo.toml
src/postgres-util/: Cargo.toml
src/proc/: Cargo.toml
src/prof/: Cargo.toml
src/prof-http/: Cargo.toml
src/proto/: Cargo.toml
src/psql-demo/: Cargo.toml  Dockerfile  build.sh
src/psql-demo/src/: main.rs
src/regexp/: Cargo.toml
src/slt/: test.slt  (+1 more)
(+174 files in other folders)
