[package]
name = "mz-pgcopy"
description = "Encoding/decoding of PostgreSQL COPY formats."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
csv = "1.1.6"
#mz-ore = { path = "../ore", features = ["network"] }
mz-pgrepr = { path = "../pgrepr" }
mz-repr = { path = "../repr" }
mz-s3util = { path = "../s3util" }
#serde = "1.0.152"
#serde_json = "1.0.89"
url = "2.3.1"
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
