[package]
name = "mz-psql-demo"
version = "0.0.0"
edition = "2021"
rust-version = "1.62.0"
publish = false

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
futures = "0.3.21"
mz-adapter = { path = "../../src/adapter" }
mz-ore =  { path = "../../src/ore" }
mz-pgwire = { path = "../../src/pgwire" }
tokio = "1.19.2"
tokio-stream = { version = "0.1.9", features = ["net"] }